refactor: comments removed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         Cash Register Manager
                 </h1>
                
-                <p class="description container-centered">
+                <p class="description">
                         Enter the bill amount and cash given by the customer and know minimum number of notes to return.
                 </p>
 
@@ -39,7 +39,7 @@
                     <caption>Return Change</caption>
                         <tbody>
                             <tr>
-                                <th>No of Notes</th>
+                                <th>Notes</th>
                                 <td class="number-of-notes"></td>
                                 <td class="number-of-notes"></td>
                                 <td class="number-of-notes"></td>
